# cpen400p-llvm-nix

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.vim/: coc-settings.json
HelloPass/: CMakeLists.txt  Pass.cpp
